<resources>
    <string name="app_name">JavaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MENU</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_planets">Planets</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_animation">Animation</string>
    <string name="open_camera">Open camera</string>
    <string name="name">name</string>
    <string name="share">share</string>
    <string name="Rotate">Rotate</string>
    <string name="desc">Description</string>
    <string name="Authenticate">Authenticate</string>
    <string name="animation">Animation</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="menu_login">Login</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_out">Signed out</string>
    <string name="loading" />
    <string name="desc_google_icon">google icon</string>
    <string name="signed_in_fmt">Signed in</string>


</resources>