<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_planets"
            android:icon="@drawable/ic_menu_planets"
            android:title="@string/menu_planets" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_animation"
            android:icon="@drawable/ic_menu_watch"
            android:title="@string/animation" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/Login" />
    </group>

</menu>