<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.javaproject.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_planets"
        android:name="com.example.javaproject.ui.fragments.PlanetsFragment"
        android:label="@string/menu_planets"
        tools:layout="@layout/fragment_planets" />
    <fragment
        android:id="@+id/nav_camera"
        android:name="com.example.javaproject.ui.fragments.CameraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_animation"
        android:name="com.example.javaproject.ui.fragments.AnimationFragment"
        android:label="@string/menu_animation"
        tools:layout="@layout/fragment_animation" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.javaproject.ui.fragments.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />

</navigation>